<resources>
    <string name="app_name">GHCP</string>
    <string name="signup">Sign UP</string>
    <string name="email">Enter Email</string>
    <string name="password">Enter Password</string>
    <string name="username">Enter Name</string>
    <string name="signupbtn">Register</string>
    <string name="nothaveaccount">Have an Account ?<font fgcolor='#87C443'><b> Sign In</b></font></string>
    <string name="enter_adress">Enter Adress</string>
    <string name="enter_address">Enter Address</string>
    <string name="scan">Scan representative ID</string>
    <string name="txt_message">" Temp "</string>
    <string name="dialog_heading_msg">Select</string>
<!--    <string name="jobnimbus_token">kl22u923n5d3s6af</string>-->
    <string name="jobnimbus_token">klck5dvikvlw9qrj</string>
<!--    <string name="jobnimbus_token">klc3uj8gsodsjfso</string>-->
<!--    <string name="jobnimbus_token">kl9bljjrmvj49zzo</string>-->
    <string name="have_you_loan_approved">Have your loan approved ?</string>
</resources>