<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <ImageView
        android:layout_gravity="center_horizontal"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/ic_launcher"
        android:text="@string/signup"
        android:textColor="@color/primary"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">
<!--        fontPath="fonts/Nunito-Bold.ttf"-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_tiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:textColorHint="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_tiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:textColorHint="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pwd_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pwd_tiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="5dp"
                android:textColorHint="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

<!--        <RelativeLayout-->
<!--            android:id="@+id/cntry_layout"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="40dp"-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_marginTop="40dp"-->
<!--            android:orientation="horizontal">-->

<!--&lt;!&ndash;            <TextView&ndash;&gt;-->
<!--&lt;!&ndash;                android:id="@+id/cntry_name"&ndash;&gt;-->
<!--&lt;!&ndash;                android:layout_width="match_parent"&ndash;&gt;-->
<!--&lt;!&ndash;                android:layout_height="match_parent"&ndash;&gt;-->
<!--&lt;!&ndash;                android:layout_centerVertical="true"&ndash;&gt;-->
<!--&lt;!&ndash;                android:layout_gravity="center"&ndash;&gt;-->
<!--&lt;!&ndash;                android:background="@android:color/transparent"&ndash;&gt;-->
<!--&lt;!&ndash;                android:gravity="center"&ndash;&gt;-->
<!--&lt;!&ndash;                android:text="@string/selectcountry"&ndash;&gt;-->

<!--&lt;!&ndash;                />&ndash;&gt;-->

<!--&lt;!&ndash;            <ImageView&ndash;&gt;-->
<!--&lt;!&ndash;                android:layout_width="wrap_content"&ndash;&gt;-->
<!--&lt;!&ndash;                android:layout_height="wrap_content"&ndash;&gt;-->
<!--&lt;!&ndash;                android:layout_alignParentEnd="true"&ndash;&gt;-->
<!--&lt;!&ndash;                android:layout_alignParentRight="true"&ndash;&gt;-->
<!--&lt;!&ndash;                android:layout_centerVertical="true"&ndash;&gt;-->
<!--&lt;!&ndash;                android:layout_gravity="center"&ndash;&gt;-->
<!--&lt;!&ndash;                android:layout_marginEnd="10dp"&ndash;&gt;-->
<!--&lt;!&ndash;                android:layout_marginRight="10dp"&ndash;&gt;-->
<!--&lt;!&ndash;                android:src="@drawable/ic_arrow_drop_down_24"&ndash;&gt;-->
<!--&lt;!&ndash;                app:tint="@android:color/black" />&ndash;&gt;-->

<!--        </RelativeLayout>-->


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/round_edge_btn"
            android:onClick="Signup_click"
            android:text="@string/signupbtn"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/not_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:textColor="@color/white"
            android:text="@string/nothaveaccount"
            android:textAlignment="center" />
    </LinearLayout>
</LinearLayout>

